@@ -1,3 +1,8 @@
+Sun Apr 29 23:46:44 2001  George Lebl <jirka@5z.com>
+
+	* main.c: when GDM_GNOME_SESSION is set, use that session.  Command
+	  line still overrides it however
+
 2001-04-30  Glynn Foster <glynn.foster@sun.com>
 	* main.c: If using the --choose-session=ARG bit, then
 	  immediately set the value of the CurrentSession. This
